--- a/sass/block/_header.scss
+++ b/sass/block/_header.scss
@@ -27,7 +27,7 @@
         //left: 0;
         //top: 0;
         .glyphicon {
-            font-size: 20px;
+            font-size: $font-size-base + 5;
             color: #b3b3b3;
         }
     }
