--- a/sass/block/_footer.scss
+++ b/sass/block/_footer.scss
@@ -2,7 +2,7 @@
     background: $bg-primary;
     padding: 16px 0;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: $font-size-base - 1;
     @include mobile {
         .pull-left,.pull-right {
             float: none!important;
@@ -11,8 +11,24 @@
 }
 
 .footer-menu-social {
+    @include mobile {
+        text-align: center;
+        float: none!important;
+        clear: both;
+    }
+    @include tablet-only {
+        text-align: center;
+        float: none!important;
+        clear: both;
+    }
     li {
-        float: left;
+        display: inline-block;
+        @include tablet {
+            float: left;
+        }
+        @include tablet-only {
+        float: none!important;
+    }
         margin:0 10px; 
         a {
             span {
@@ -24,11 +40,18 @@
 
 .copy-right {
      margin: 18px 0 0 ;
+     @include mobile {
+        text-align: center;
+        float: none!important;
+     }
 }
 .footer-menu-primary {
     margin: 18px 0 0 8px;
     li {
-         float: left;
+        text-align: center;
+        @include tablet {
+            float: left;
+        }
         margin:0 8px; 
         a {
             
