--- a/sass/block/_hero-banner.scss
+++ b/sass/block/_hero-banner.scss
@@ -16,7 +16,7 @@
     }
     h2,
     .em {
-        font-size: 20px;
+        font-size: $font-size-base + 5;
     }
     h2 {
     	text-transform: uppercase;
