--- a/sass/block/_utilities.scss
+++ b/sass/block/_utilities.scss
@@ -95,7 +95,7 @@ ul {
     &.btn-default {
         @include border-radius(0);
         border-width: 3px;
-        font-size: 16px;
+        font-size: $font-size-base + 1;
         font-family: $font-default-bold;
         text-transform: uppercase;
         padding: 20px 50px;
