--- a/css/styles.css
+++ b/css/styles.css
@@ -7432,9 +7432,14 @@ h3,
 }
 
 h1 {
-  font-size: 70px;
+  font-size: 40px;
   line-height: 100%;
   margin: 0 0 10px;
+}
+@media only screen and (min-width: 768px) {
+  h1 {
+    font-size: 70px;
+  }
 }
 
 h2 {
@@ -10263,14 +10268,19 @@ body {
 }
 .tab-content .tab-pane-content .item {
   position: relative;
+  float: left;
+  padding: 0 40px;
   display: block;
   text-align: center;
 }
+@media only screen and (max-width: 767px) {
+  .tab-content .tab-pane-content .item {
+    width: 50%;
+  }
+}
 @media only screen and (min-width: 768px) {
   .tab-content .tab-pane-content .item {
-    float: left;
     width: 20%;
-    padding: 0 40px;
   }
 }
 .tab-content .tab-pane-content .item .number {
@@ -10393,8 +10403,18 @@ body {
   padding: 90px 0;
   background: #e0251c;
 }
+@media only screen and (max-width: 767px) {
+  .entry-section .text-right {
+    text-align: center;
+  }
+}
 .entry-section .button-submit {
   margin-top: 30px;
+}
+@media only screen and (max-width: 767px) {
+  .entry-section .button-submit {
+    width: 80%;
+  }
 }
 .entry-section a {
   color: #000;
@@ -10578,21 +10598,38 @@ body {
   padding-top: 0;
 }
 
-.search-bar {
-  background: #ba2018;
+@media only screen and (min-width: 768px) {
+  .search-bar {
+    background: #ba2018;
+  }
 }
-.search-bar .col-md-6 {
-  font-size: 0;
+@media only screen and (max-width: 767px) {
+  .search-bar .col-md-6 {
+    padding: 0;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .search-bar .col-md-6 {
+    font-size: 0;
+  }
 }
 .search-bar label {
+  text-align: center;
+  display: block;
+  padding: 20px 0;
   vertical-align: middle;
-  width: 50%;
-  padding-right: 78px;
-  text-align: right;
   font-size: 20px;
   font-family: "NescafeSans-Bold", sans-serif;
   text-transform: uppercase;
   position: relative;
+}
+@media only screen and (min-width: 768px) {
+  .search-bar label {
+    width: 50%;
+    display: inline-block;
+    text-align: right;
+    padding: 0px 70px 0 0;
+  }
 }
 .search-bar label:after {
   width: 0;
@@ -10612,15 +10649,31 @@ body {
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
 }
+@media only screen and (max-width: 767px) {
+  .search-bar label:after {
+    width: 0;
+    bottom: -35px;
+    right: 50%;
+    top: auto;
+    -moz-transform: rotate(-270deg);
+    -ms-transform: rotate(-270deg);
+    -webkit-transform: rotate(-270deg);
+    transform: rotate(-270deg);
+  }
+}
 .search-bar input[type="text"] {
   height: 130px;
   vertical-align: middle;
-  width: 50%;
   font-size: 15px;
   font-style: italic;
   display: inline-block;
-  padding-left: 50px;
   color: #000;
+}
+@media only screen and (min-width: 768px) {
+  .search-bar input[type="text"] {
+    width: 50%;
+    padding-left: 50px;
+  }
 }
 .search-bar input[type="text"]:focus, .search-bar input[type="text"]:active {
   -moz-box-shadow: none;
@@ -10630,9 +10683,11 @@ body {
 .search-bar .left {
   background: #141414;
 }
-.search-bar .right-action {
-  margin-left: -20px;
-  font-size: 0;
+@media only screen and (min-width: 768px) {
+  .search-bar .right-action {
+    font-size: 0;
+    margin-left: -20px;
+  }
 }
 .search-bar .right-action * {
   font-size: 15px;
@@ -10647,6 +10702,11 @@ body {
   vertical-align: middle;
   font-family: "NescafeSans-Bold", sans-serif;
   text-transform: uppercase;
+}
+@media only screen and (max-width: 767px) {
+  .search-bar .search-button {
+    display: none;
+  }
 }
 @media (min-width: 1025px) {
   .search-bar .search-button {
@@ -10664,6 +10724,11 @@ body {
   height: 130px;
   padding: 39px 6px;
   text-transform: uppercase;
+}
+@media only screen and (max-width: 767px) {
+  .search-bar .filter-button {
+    width: 50%;
+  }
 }
 @media (min-width: 1025px) {
   .search-bar .filter-button {
@@ -10705,21 +10770,34 @@ body {
   top: 15px;
 }
 
-.search-filter {
-  text-align: center;
+@media only screen and (min-width: 768px) {
+  .search-filter {
+    text-align: center;
+  }
 }
 .search-filter .panel-collapse {
   width: 100%;
-  text-align: center;
 }
-.search-filter li {
-  display: inline-block;
+@media only screen and (min-width: 768px) {
+  .search-filter .panel-collapse {
+    text-align: center;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .search-filter li {
+    display: inline-block;
+  }
 }
 .search-filter li a {
-  display: inline-block;
+  display: block;
   padding: 40px 30px;
   font-size: 16px;
   text-transform: uppercase;
+}
+@media only screen and (min-width: 768px) {
+  .search-filter li a {
+    display: inline-block;
+  }
 }
 .search-filter li a:hover {
   background: #e42926;
